ダミーデータの作成

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -48,6 +48,10 @@ body {
     margin-bottom: 15px;
 }
 
+.form__group-content {
+    display: flex;
+}
+
 .form__label--required {
     color: #FF9494;
 }
